Changed picture ratios to avoid stretching, added post for Day 18.

--- a/custom.css
+++ b/custom.css
@@ -6,7 +6,6 @@ img
 .team-pics
 {
     height: 250px;
-    width: 170px;
     margin-right: 10px;
     margin-bottom: 20px;
 }
